--- a/config.yaml
+++ b/config.yaml
@@ -30,3 +30,33 @@ store:
   sqlite3:
     # the URI for the database connection
     uri: data/game.db
+
+# configuration for game interface
+interfaces:
+  # primary inventory tab interface
+  inventory:
+    id: 3213
+    slots: 3214
+  # equipment tab interface and child interface for bonuses
+  equipment:
+    id: 1644
+    slots: 1688
+    bonuses:
+      attack:
+        stab: 1675
+        slash: 1676
+        crush: 1677
+        magic: 1678
+        range: 1679
+      defense:
+        stab: 1680
+        slash: 1681
+        crush: 1682
+        magic: 1683
+        range: 1684
+      other:
+        strength: 1686
+        prayer: 1687
+  # skills tab interface
+  skills:
+    id: 3917
