--- a/config.yaml
+++ b/config.yaml
@@ -69,6 +69,27 @@ interfaces:
     other:
       strength: 1686
       prayer: 1687
+  # equipped weapon tab interface
+  weapon:
+    2hSword: 4705
+    axe: 1698
+    bow: 1764
+    blunt: 425
+    claws: 7762
+    crossbow: 1749
+    gun: 13975
+    pickaxe: 5570
+    polearm: 8460
+    polestaff: 6103
+    scythe: 776
+    slashSword: 2423
+    spear: 4679
+    spiked: 3796
+    stabSword: 2276
+    staff: 328
+    thrown: 4446
+    whip: 12290
+    unarmed: 4705
   # skills tab interface
   skills:
     id: 3917
